--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,11 @@ body {
     background-color: #222;
     color: white;
     font-family: 'Fantasy', sans-serif;
+    background-image: url(bg2.png);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 #mirror-container {
